Projeto escola UPDATE 2
Agora o PHP funciona e o CSS do cadastro de produto tá pronto

--- a/Back-End/Projeto loja/cadastroMarca/marca.html
+++ b/Back-End/Projeto loja/cadastroMarca/marca.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="marca.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <title>Cadastro de Marca</title> 
 </head>
 
@@ -11,9 +11,8 @@
 
     <div class="container">
         <div class="title">
-            <h1>CADASTRO DE MARCA:</h1>
+            <h1>CADASTRO DE MARCA</h1>
         </div>
-    
         <br>
         <div class="form">
             <form name="formulario" method="post" action="marca.php">
