--- a/Back-End/Projeto loja/cadastroTipo/tipo.html
+++ b/Back-End/Projeto loja/cadastroTipo/tipo.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="tipo.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <title>Cadastro de Tipo</title> 
 </head>
 
@@ -10,7 +10,7 @@
 
     <div class="container">
         <div class="title">
-            <h1>CADASTRO DE TIPO:</h1>
+            <h1>CADASTRO DE TIPO</h1>
         </div>
     
         <br>
