--- a/Back-End/Projeto loja/cadastroCategoria/categoria.html
+++ b/Back-End/Projeto loja/cadastroCategoria/categoria.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="categoria.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <title>Cadastro de Categoria</title> 
 </head>
 
@@ -11,7 +11,7 @@
 
 <div class="container">
     <div class="title">
-        <h1>CADASTRO DE CATEGORIA:</h1>
+        <h1>CADASTRO DE CATEGORIA</h1>
     </div>
 
     <br>
