--- a/Back-End/Projeto loja/login/login.html
+++ b/Back-End/Projeto loja/login/login.html
@@ -3,28 +3,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
-    <title>Cadastro de Tipo</title> 
+    <title>Login</title> 
 </head>
 
 <body>
 
     <div class="container">
         <div class="title">
-            <h1>CADASTRO DE TIPO DO PRODUTO</h1>
+            <h1>LOGIN DO MODERADOR</h1>
         </div>
     
         <br>
         <div class="form">
-            <form name="formulario" method="post" action="tipo.php">
-                código: <input type="text" name="codigo" id="codigo" size="29" class="input">
+            <form name="formulario" method="post" action="login.php">
+                email: <input type="text" name="email" id="email" size="30" class="input">
                 <br><br>
-                nome: <input type="text" name="nome" id="nome" size="30" class="input">
+                senha: <input type="password" name="senha" id="senha" size="29" class="input">
                 <br><br>
                 <div class="buttons">
-                    <input type="submit" name="gravar" value="gravar" class="bt1">
-                    <input type="submit" name="alterar" value="alterar" class="bt2">
-                    <input type="submit" name="excluir" value="excluir" class="bt3">
-                    <input type="submit" name="pesquisar" value="pesquisar" class="bt4">
+                    <input type="submit" name="entrar" value="entrar" class="btl">
                 </div>
             </form>
         </div>
