--- a/Back-End/Projeto loja/cadastroCategoria/categoria.html
+++ b/Back-End/Projeto loja/cadastroCategoria/categoria.html
@@ -11,7 +11,7 @@
 
 <div class="container">
     <div class="title">
-        <h1>CADASTRO DE CATEGORIA</h1>
+        <h1>CADASTRO DE CATEGORIA DO PRODUTO</h1>
     </div>
 
     <br>
@@ -29,6 +29,9 @@
             </div>
         </form>
     </div>
+</div>
+<div class="extra">
+    <h5>Copyright © 2025-2025 Todos os direitos reservados. Política de privacidade | Informação AUG | Imagens e conteúdo por ZéConfiaQueExiste1915.net</h5>
 </div>
 </body>
 </html>
