--- a/Back-End/Projeto loja/login/login.html
+++ b/Back-End/Projeto loja/login/login.html
@@ -3,14 +3,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
-    <title>Login</title> 
+    <title>LoginFuncionárioZéRoupas.com.br</title>
+    <link rel="icon" href="../images/Zé.png">
 </head>
 
 <body>
 
     <div class="container">
         <div class="title">
-            <h1>LOGIN DO MODERADOR</h1>
+            <h1>LOGIN DO MENU DE CADASTROS</h1>
         </div>
     
         <br>
