--- a/Back-End/Projeto loja/menu/menu.html
+++ b/Back-End/Projeto loja/menu/menu.html
@@ -3,7 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
-    <title>Menu</title> 
+    <title>MenuDosCadastrosZéRoupas.com.br</title> 
+    <link rel="icon" href="../images/Zé.png">
 </head>
 
 <body>
@@ -24,7 +25,7 @@
                 <a href="../cadastroProduto/produto.html">>>>Cadastro do produto<<<</a>
         </div>
         <div class="disclaimer">
-            <h4>Atenção! Só utilize este site se você for um moderador!</h4>
+            <h4>Atenção! Só utilize este site se você for um funcionário da Zé Roupas!</h4>
         </div>
     </div>
     <div class="extra">
