--- a/Back-End/Projeto loja/cadastroTipo/tipo.html
+++ b/Back-End/Projeto loja/cadastroTipo/tipo.html
@@ -3,7 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
-    <title>Cadastro de Tipo</title> 
+    <title>CadastroDeTipoZéRoupas.com.br</title> 
+    <link rel="icon" href="../images/Zé.png">
 </head>
 
 <body>
