--- a/Back-End/Projeto loja/home/home.html
+++ b/Back-End/Projeto loja/home/home.html
@@ -26,16 +26,50 @@
             </div>
         </div>
         <div id="filter">
-            <div id="filters">
-                Marca:
-                <select name="" id="">
-                   <option value="text" selected="selected">Todos os produtos</option>
-                   <option value="text">Adidas</option>
-                   <option value="text">Nike</option>
-                   <option value="text">Lacoste</option>
-                   <option value="text">Calvin Klein</option>
-                   <option value="text">Tommy Hilfiger</option>
-                </select>
+            <div class="filter-options">
+                <div>
+                    Categoria
+                </div>
+                <div>
+                    <select name="category" id="">
+                        <option value="text" selected="selected">Todas as categorias</option>
+                        <option value="text">Adidas</option>
+                        <option value="text">Nike</option>
+                        <option value="text">Lacoste</option>
+                        <option value="text">Calvin Klein</option>
+                        <option value="text">Tommy Hilfiger</option>
+                    </select>
+                </div>             
+            </div>
+            <div class="filter-options">
+                <div>
+                    Marca
+                </div>
+                <div>
+                    <select name="brand" id="">
+                        <option value="text" selected="selected">Todas as marcas</option>
+                        <option value="text">Adidas</option>
+                        <option value="text">Nike</option>
+                        <option value="text">Lacoste</option>
+                        <option value="text">Calvin Klein</option>
+                        <option value="text">Tommy Hilfiger</option>
+                    </select>
+                </div>
+            </div>
+            <div class="filter-options">
+                <div>
+                    Tipo
+                </div>
+                <div>
+                    <select name="type" id="">
+                        <option value="text" selected="selected">Todos os tipos</option>
+                        <option value="text">Adidas</option>
+                        <option value="text">Nike</option>
+                        <option value="text">Lacoste</option>
+                        <option value="text">Calvin Klein</option>
+                        <option value="text">Tommy Hilfiger</option>
+                    </select>
+                </div>
             </div>
         </div>
     </div>
