--- a/Back-End/Projeto livraria/login/login.html
+++ b/Back-End/Projeto livraria/login/login.html
@@ -4,10 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
     <title>LoginFuncionárioLivrariaDoSeuZé.com.br</title>
-    <link rel="icon" href="">
+    <link rel="icon" href="../images/Zé Livros.png">
 </head>
 
-<body>
+<body class="body">
 
     <div class="container">
         <div class="title">
@@ -17,14 +17,17 @@
         <br>
         <div class="form">
             <form name="formulario" method="post" action="login.php">
-                email: <input type="text" name="email" id="email" size="30" class="input">
+                E-MAIL: <input type="text" name="email" id="email" size="30" class="input">
                 <br><br>
-                senha: <input type="password" name="senha" id="senha" size="29" class="input">
+                SENHA: <input type="password" name="senha" id="senha" size="30" class="input">
                 <br><br>
                 <div class="buttons">
-                    <input type="submit" name="entrar" value="entrar" class="btl">
+                    <input type="submit" name="entrar" value="ENTRAR" class="btl">
                 </div>
             </form>
+        </div>
+        <div class="back">
+            <a href="../home/home.php">VOLTAR</a>
         </div>
     </div>
     <div class="extra">
