--- a/Back-End/Projeto livraria/cadastroAutor/cadastroAutor.html
+++ b/Back-End/Projeto livraria/cadastroAutor/cadastroAutor.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
     <title>CadastroAutorLivrariaDoSeuZé.com.br</title> 
-    <link rel="icon" href="">
+    <link rel="icon" href="../images/Zé Livros.png">
 </head>
 
-<body>
+<body class="body">
 
     <div class="container">
         <div class="title">
