--- a/Back-End/Projeto livraria/cadastroAutor/cadastroAutor.html
+++ b/Back-End/Projeto livraria/cadastroAutor/cadastroAutor.html
@@ -24,12 +24,15 @@
                 PAÍS: <input type="text" name="pais" id="pais" size="33" class="input">
                 <br><br>
                 <div class="buttons">
-                    <input type="submit" name="gravar" value="GRAVAR" class="bt1">
-                    <input type="submit" name="alterar" value="ALTERAR" class="bt2">
-                    <input type="submit" name="excluir" value="EXCLUIR" class="bt3">
-                    <input type="submit" name="pesquisar" value="PESQUISAR" class="bt4">
+                    <input type="submit" name="gravar" value="GRAVAR" class="bt">
+                    <input type="submit" name="alterar" value="ALTERAR" class="bt">
+                    <input type="submit" name="excluir" value="EXCLUIR" class="bt">
+                    <input type="submit" name="pesquisar" value="PESQUISAR" class="bt">
                 </div>
             </form>
+        </div>
+        <div class="back">
+            <a href="../menu/menu.html">VOLTAR</a>
         </div>
     </div>
     <div class="extra">
