--- a/Back-End/Projeto livraria/cadastroLivro/cadastroLivro.html
+++ b/Back-End/Projeto livraria/cadastroLivro/cadastroLivro.html
@@ -18,31 +18,31 @@
     <div class="form">
     <form name="formulario" method="post" action="cadastroLivro.php" enctype="multipart/form-data">
         <label>CÓDIGO:</label> 
-        <input type="text" name="codigo" id="codigo" size="38">
+        <input type="text" name="codigo" id="codigo" size="38" class="input">
         <br><br>
         <label>TÍTULO:</label>
-        <input type="text" name="titulo" id="titulo" size="39">
+        <input type="text" name="titulo" id="titulo" size="39"class="input">
         <br><br>
         <label>PÁGINAS:</label>
-        <input type="text" name="paginas" id="paginas" size="37">
+        <input type="text" name="paginas" id="paginas" size="37" class="input">
         <br><br>
         <label>ANO:</label>
-        <input type="text" name="ano" id="ano" size="42">
+        <input type="text" name="ano" id="ano" size="42" class="input">
         <br><br>
         <label>CODAUTOR:</label>
-        <input type="text" name="codautor" id="codautor" size="34">
+        <input type="text" name="codautor" id="codautor" size="34" class="input">
         <br><br>
         <label>CODCATEGORIA:</label>
-        <input type="text" name="codcategoria" id="codcategoria" size="29">
+        <input type="text" name="codcategoria" id="codcategoria" size="29" class="input">
         <br><br>
         <label>CODEDITORA:</label> 
-        <input type="text" name="codeditora" id="codeditora" size="32">
+        <input type="text" name="codeditora" id="codeditora" size="32" class="input">
         <br><br>
         <label>RESENHA:</label>
-        <input type="text" name="resenha" id="resenha" size="36">
+        <input type="text" name="resenha" id="resenha" size="36" class="input">
         <br><br>
         <label>PREÇO:</label>
-        <input type="text" name="preco" id="preco" size="39">
+        <input type="text" name="preco" id="preco" size="39" class="input">
         <br><br>
         <label>FOTO 1:</label>
         <input type="file" name="foto1" id="foto1" size="">
@@ -51,12 +51,15 @@
         <input type="file" name="foto2" id="foto2" size="">
         <br><br>
         <div class="buttons">
-            <input type="submit" name="gravar" value="GRAVAR" class="bt1">
-            <input type="submit" name="alterar" value="ALTERAR" class="bt2">
-            <input type="submit" name="excluir" value="EXCLUIR" class="bt3">
-            <input type="submit" name="pesquisar" value="PESQUISAR" class="bt4">
+            <input type="submit" name="gravar" value="GRAVAR" class="bt">
+            <input type="submit" name="alterar" value="ALTERAR" class="bt">
+            <input type="submit" name="excluir" value="EXCLUIR" class="bt">
+            <input type="submit" name="pesquisar" value="PESQUISAR" class="bt">
         </div>
     </form>
+    </div>
+    <div class="back">
+        <a href="../menu/menu.html">VOLTAR</a>
     </div>
 </div>
 <div class="extra">
